lang/editors/tree-sitter-langx/test/corpus/declarations.txt
================================================================================
Simple function definition
================================================================================

fn square(x Int) Int = x * x;

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (binary_expression
      left: (primary_expression
        (identifier))
      right: (primary_expression
        (identifier)))))

================================================================================
Function with block body
================================================================================

fn abs(x Int) Int {
    if (x < 0) {
        return -x;
    }
    x
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (if_statement
        condition: (binary_expression
          left: (primary_expression
            (identifier))
          right: (primary_expression
            (integer_literal)))
        consequence: (block
          (return_statement
            (unary_expression
              operand: (primary_expression
                (identifier))))))
      (expression_statement
        (primary_expression
          (identifier))))))

================================================================================
Let declaration
================================================================================

let x = 42;

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (primary_expression
      (integer_literal))))

================================================================================
Var declaration
================================================================================

var counter = 0;

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    name: (identifier)
    value: (primary_expression
      (integer_literal))))

================================================================================
Const declaration
================================================================================

const MAX_SIZE = 1000;

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    name: (identifier)
    value: (primary_expression
      (integer_literal))))

================================================================================
Struct with named fields
================================================================================

struct Point { x Float, y Float }

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (struct_body
      (struct_field
        name: (identifier)
        type: (primitive_type))
      (struct_field
        name: (identifier)
        type: (primitive_type)))))

================================================================================
Enum definition
================================================================================

enum Color { red, green, blue }

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_case
      name: (identifier))
    (enum_case
      name: (identifier))
    (enum_case
      name: (identifier))))

================================================================================
Enum with associated types
================================================================================

enum Option { some Int, none }

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_case
      name: (identifier)
      type: (primitive_type))
    (enum_case
      name: (identifier))))

================================================================================
Type alias
================================================================================

type UserId = Int;

--------------------------------------------------------------------------------

(source_file
  (type_alias
    name: (identifier)
    type: (primitive_type)))

================================================================================
Generic function
================================================================================

fn identity<T>(x T) T = x;

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (type_parameters
      (identifier))
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier
          (identifier))))
    return_type: (type_identifier
      (identifier))
    body: (primary_expression
      (identifier))))

================================================================================
Import declaration
================================================================================

import std.math;

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (import_path
      (identifier)
      (identifier))))

================================================================================
Operator overload
================================================================================

fn +(a Int, b Int) Int = a + b;

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (operator_name)
    (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (binary_expression
      left: (primary_expression
        (identifier))
      right: (primary_expression
        (identifier)))))

================================================================================
Generic struct
================================================================================

struct Box<T> { value T }

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (type_parameters
      (identifier))
    (struct_body
      (struct_field
        name: (identifier)
        type: (type_identifier
          (identifier))))))
